# comby

./: .dockerignore  .gitignore  .ocamlformat  .ocamlformat-ignore  .travis-ocaml.sh  .travis.ocaml.yml  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  benchmark  comby  comby-kernel.opam  comby-semantic.opam  comby-server  comby.opam  dune  dune-project  push-coverage-report.sh
docs/: ROADMAP.md  (+5 more)
js/: comby.ml  dune
lib/: comby.ml  comby.mli  dune
lib/app/: comby.ml  comby.mli  dune
lib/app/configuration/: command_configuration.ml  command_configuration.mli  command_input.ml  diff_configuration.ml  dune  external_semantic.ml  regex.ml  regex.mli  ripgrep.ml  ripgrep.mli  specification.ml  specification.mli
lib/app/interactive/: dune  interactive.ml
lib/app/pipeline/: dune  fold.ml  parallel_hack.available.ml  parallel_hack.parany_fallback.ml  parallel_parany.ml  pipeline.ml  pipeline.mli  sequential.ml
lib/app/statistics/: dune  statistics.ml  statistics.mli  time.ml
lib/configuration/: command_configuration.ml  command_configuration.mli  command_input.ml  diff_configuration.ml  dune  ripgrep.ml  specification.ml
lib/interactive/: dune  interactive.ml
lib/kernel/: comby_kernel.ml  comby_kernel.mli  dune
lib/kernel/language/: alpha_parser.ml  alpha_rule.ml  ast.ml  dune  evaluate.ml  omega_parser.ml  omega_rule.ml  options.ml  options.mli  parser.ml  rule.ml  rule.mli  rule_parser.ml  script.ml  syntax.ml  types.ml
lib/kernel/match/: dune  environment.ml  environment.mli  location.ml  match.ml  match.mli  match_chunk.ml  match_context.ml  offset.ml  offset.mli  range.ml  types.ml
lib/kernel/matchers/: alpha.ml  alpha.mli  ast.ml  configuration.ml  configuration.mli  dune  engine.ml  engine.mli  evaluate.ml  external.ml  external.mli  languages.ml  languages.mli  matchers.ml  matchers.mli  metasyntax.ml  metasyntax.mli  omega.ml  omega.mli  omega_parser_helper.ml  parser.ml  preprocess.ml  regexp.ml  regexp.mli  rewrite.ml  rewrite.mli  rewrite_template.ml  rewrite_template.mli  rewriter.mli  rule.ml  script.ml  specification.ml  specification.mli  syntax.ml  template.ml  template.mli  types.ml
lib/kernel/parsers/: alpha_comments.ml  alpha_string_literals.ml  dune  omega_comments.ml  (+1 more)
lib/language/: README.md  alpha_rule.ml  ast.ml  dune  omega_rule.ml  options.ml  parser.ml  rule.ml  rule.mli  script.ml  syntax.ml  types.ml
lib/match/: dune  environment.ml  environment.mli  location.ml  match.mli  match_context.ml  offset.ml  offset.mli  range.ml
lib/matchers/: alpha.ml  alpha.mli  alpha_matchers.ml  alpha_matchers.mli  bash.ml  c.ml  configuration.ml  configuration.mli  dune  dyck.ml  engine.ml  generic.ml  go.ml  go.mli  html.ml  languages.ml  languages.mli  latex.ml  matcher.ml  matcher.mli  matchers.ml  matchers.mli  metasyntax.ml  metasyntax.mli  omega.ml  omega.mli  omega_matchers.ml  parser.ml  python.ml  syntax_config.ml  syntax_config.mli  types.ml
lib/parsers/: alpha_comments.ml  alpha_string_literals.ml  comments.ml  comments.mli  delimiters.ml  dune  omega_comments.ml  omega_string_literals.ml  string_literals.ml
lib/pipeline/: command_configuration.ml  command_configuration.mli  diff_configuration.ml  dune  fold.ml  interactive.ml  parallel_hack.available.ml  parallel_hack.ml  parallel_hack.parany_fallback.ml  parallel_parany.ml  pipeline.ml  pipeline.mli  sequential.ml
lib/replacement/: diff_configuration.ml  dune  replacement.ml  replacement.mli
lib/rewriter/: dune  replacement.ml  replacement.mli  replacement_context.mli  rewrite.ml  rewrite.mli  rewrite_template.ml  rewrite_template.mli  rewriter.ml
lib/semantic/: README.md  dune  lsif.ml  lsif.mli
lib/server/: dune  server_types.ml
lib/statistics/: dune  statistics.ml  statistics.mli  time.ml
src/: benchmark.ml  command_configuration.ml  command_configuration.mli  diff_configuration.ml  dune  if_hack_parallel.available.ml  if_hack_parallel.unavailable.ml  main.ml  server.ml  server_types.ml  specification.ml
test/: #test_cli.ml#  dune  test_bash.ml  test_c_separators.ml  test_c_style_comments.ml  test_cli.ml  test_generic.ml  test_hole_extensions.ml  test_integration.ml  test_lua.ml  test_match_rule.ml  test_nested_comments.ml  test_pipeline.ml  test_posix_holes.ml  test_rewrite_parts.ml  test_rewrite_rule.ml  test_server.ml  test_special_matcher_cases.ml  test_statistics.ml  test_user_defined_language.ml
test/alpha/: dune  example  test_c_style_comments.ml  test_cli.ml  test_custom_metasyntax.ml  test_hole_extensions.ml  test_integration.ml  test_optional_holes.ml  test_python_string_literals.ml  test_regex_holes.ml  test_server.ml  test_special_matcher_cases.ml  test_string_literals.ml  test_substring_disabled.ml
test/common/: dune  test_alpha.ml  test_bash.ml  test_bash_alpha.ml  test_bash_omega.ml  test_c.ml  test_c_alpha.ml  test_c_omega.ml  test_c_separators.ml  test_c_separators_alpha.ml  test_c_separators_omega.ml  test_c_style_comments.ml  test_c_style_comments_alpha.ml  test_c_style_comments_omega.ml  test_cli.ml  test_cli_helper.ml  test_cli_list.ml  test_custom_metasyntax.ml  test_extract_regex.ml  test_generic.ml  test_generic_alpha.ml  test_generic_omega.ml  test_go.ml  test_go_alpha.ml  test_go_omega.ml  test_helpers.ml  test_hole_extensions.ml  test_hole_extensions_alpha.ml  test_hole_extensions_omega.ml  test_integration.ml  test_integration_alpha.ml  test_integration_omega.ml  test_match_chunk_conversion.ml  test_match_offsets.ml  test_match_rule.ml  test_match_rule_alpha.ml  test_match_rule_omega.ml  test_nested_comments.ml  test_nested_comments_alpha.ml  test_nested_comments_omega.ml  (+36 more)
test/omega/: dune  test_c_style_comments.ml  test_cli.ml  test_generic.ml  test_hole_extensions.ml  test_integration.ml  test_match_rule.ml  test_optional_holes.ml  test_python_string_literals.ml  test_regex_holes.ml  test_rewrite_rule.ml  test_server.ml  test_special_matcher_cases.ml  test_statistics.ml  test_string_literals.ml  test_substring_disabled.ml  test_template_printer_visitor.ml  test_template_visitor.ml
third-party-licenses/opium/: opium.opam
(+99 files in other folders)
