opam-version: "2.0"
maintainer: "rvantonder@gmail.com"
authors: "Rijnard van Tonder"
homepage: "https://github.com/comby-tools/comby"
bug-reports: "https://github.com/comby-tools/comby/issues"
dev-repo: "git+https://github.com/comby-tools/comby.git"
license: "Apache-2.0"
build: [
    [
      "dune"
      "build"
      "-p"
      name
      "-j"
      jobs
      "@install"
      "@runtest" {with-test}
    ]
]
depends: [
  "dune" {>= "2.7.0"}
  "ocaml" {>= "4.08.1"}
  "angstrom" {>= "0.15.0"}
  "conf-autoconf"
  "conf-gmp"
  "conf-libenv"
  "conf-libpcre"
  "conf-m4" {os = "linux"}
  "conf-pkg-config"
  "conf-sqlite3"
  "conf-zlib" {os = "linux"}
  "hack_parallel" {arch != "arm32" & arch != "arm64"}
  "conduit-lwt-unix"
  "core"
  "lwt"
  "lwt_react"
  "opium"
  "cohttp-lwt-unix"
  "parany"
  "patience_diff" {>= "v0.14" & < "v0.15"}
  "ppxlib"
  "ppx_deriving"
  "ppx_deriving_yojson" {>= "3.6.0"}
  "pcre"
  "shell"
  "toml" {>= "6.0.0"}
  "tls"
  "bisect_ppx" {with-test & dev & >= "2.5.0"}
]
x-ci-accept-failures: ["oraclelinux-8"] # libev not available by default
synopsis: "A tool for structural code search and replace that supports ~every language"
description: """
Comby is a tool designed to make it easy to match change syntax for basically
every language. You can think of it like grep or sed, but with added ability to
recognize code structures like blocks and expressions (e.g., delimited by
braces or parentheses), strings (e.g., delimited by quotes), and so on.
"""
