opam-version: "2.0"
maintainer: "rvantonder@gmail.com"
authors: "Rijnard van Tonder"
homepage: "https://github.com/comby-tools/comby"
bug-reports: "https://github.com/comby-tools/comby/issues"
dev-repo: "git+https://github.com/comby-tools/comby.git"
license: "Apache-2.0"
build: [
    [
      "dune"
      "build"
      "-p"
      name
      "-j"
      jobs
      "@install"
      "@runtest" {with-test}
    ]
]
depends: [
  "dune" {>= "2.8.0"}
  "ocaml" {>= "4.08.1"}
  "conf-autoconf"
  "conf-gmp"
  "conf-libev" {os-distribution != "ol"}
  "conf-libpcre"
  "conf-m4" {os = "linux"}
  "conf-pkg-config"
  "conf-sqlite3"
  "conf-zlib" {os = "linux"}
  "cohttp-lwt-unix"
  "comby-kernel" {= "1.7.0"}
  "comby-semantic" {= "1.7.0"}
  "core"
  "hack_parallel" {arch != "arm32" & arch != "arm64"}
  "lwt"
  "lwt_react"
  "mparser" {>= "1.3"}
  "mparser-pcre"
  "parany" {>= "12.0.3"}
  "patience_diff" {>= "v0.14" & < "v0.15"}
  "ppx_deriving"
  "ppx_deriving_yojson" {>= "3.6.0"}
  "yojson" {>= "1.6.0"}
  "pcre"
  "shell"
  "tar"
  "tar-unix"
  "toml" {>= "6.0.0"}
  "bisect_ppx" {with-test & dev & >= "2.5.0"}
]
synopsis: "A tool for structural code search and replace that supports ~every language"
description: """
Comby is a tool designed to make it easy to match change syntax for basically
every language. You can think of it like grep or sed, but with added ability to
recognize code structures like blocks and expressions (e.g., delimited by
braces or parentheses), strings (e.g., delimited by quotes), and so on.
"""
