(library
  (name comby)
  (public_name comby)
  (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_sexp_conv bisect_ppx -conditional -no-comment-parsing))
  (libraries 
   ppxlib 
   core 
   mparser 
   mparser.pcre 
   comby.matchers
   comby.rewriter
   comby.match
   comby.language
   comby.statistics))
