(library
  (name comby)
  (public_name comby)
  (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_sexp_conv bisect_ppx -conditional))
  (libraries 
   ppxlib 
   core 
   mparser 
   mparser.pcre 
   comby.language
   comby.match
   comby.matchers
   comby.pipeline
   comby.replacement
   comby.rewriter
   comby.server_types
   comby.statistics))
