(library
  (name comby)
  (public_name comby)
  (instrumentation (backend bisect_ppx))
  (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_sexp_conv))
  (libraries 
   core 
   mparser-comby
   comby.language
   comby.match
   comby.matchers
   comby.pipeline
   comby.replacement
   comby.rewriter
   comby.server_types
   comby.statistics))
