(executables
 (libraries comby core ppx_deriving_yojson ppx_deriving_yojson.runtime hack_parallel camlzip patdiff)
 (preprocess (pps ppx_deriving_yojson ppx_let ppx_deriving.show ppx_sexp_conv))
 (modules main)
 (modes byte exe)
 (names main))

(executables
 (libraries comby core opium ppx_deriving_yojson ppx_deriving_yojson.runtime hack_parallel)
 (preprocess (pps ppx_deriving_yojson ppx_let ppx_deriving.show ppx_sexp_conv))
 (modules server)
 (names server))

(executables
 (libraries comby core opium ppx_deriving_yojson ppx_deriving_yojson.runtime hack_parallel)
 (preprocess (pps ppx_deriving_yojson ppx_let ppx_deriving.show ppx_sexp_conv))
 (modules benchmark)
 (names benchmark))

(alias
 (name DEFAULT)
 (deps main.exe))

(alias
 (name DEFAULT)
 (deps main.bc))

(alias
 (name DEFAULT)
 (deps server.exe))

(alias
 (name DEFAULT)
 (deps benchmark.exe))

(install
 (section bin)
 (files (main.exe as comby)))

(install
 (section bin)
 (files (benchmark.exe as benchmark)))

(install
 (section bin)
 (files (server.exe as comby-server)))
