(executables
 (libraries
  comby
  core
  ppx_deriving_yojson
  ppx_deriving_yojson.runtime
  (select
   if_hack_parallel.ml
   from
   (hack_parallel -> if_hack_parallel.available.ml)
   (!hack_parallel -> if_hack_parallel.unavailable.ml)))
 (preprocess
  (pps ppx_deriving_yojson ppx_let ppx_deriving.show ppx_sexp_conv))
 (modules main if_hack_parallel)
 (modes byte exe)
 (names main))

(alias
 (name DEFAULT)
 (deps main.exe))

(alias
 (name DEFAULT)
 (deps main.bc))

(install
 (package comby)
 (section bin)
 (files
  (main.exe as comby)))
