(library
 (name test_integration)
 (modules
  test_match_rule
  test_python_string_literals
  test_nested_comments
  test_integration
  test_statistics
  test_c
  test_cli
  test_bash
  test_go
  test_c_style_comments
  test_c_separators
  test_string_literals
  test_special_matcher_cases
  test_generic
  test_rewrite_parts
  test_rewrite_rule
  test_server)
 (inline_tests)
 (preprocess (pps ppx_expect ppx_sexp_message ppx_deriving_yojson ppx_deriving_yojson.runtime))
 (libraries
  comby
  cohttp-lwt-unix
  core
  camlzip))

(alias
(name runtest)
(deps (source_tree example) (source_tree example/src/.ignore-me)))
