(library
  (name configuration)
  (public_name comby.configuration)
  (instrumentation (backend bisect_ppx))
  (preprocess (pps ppx_deriving.show ppx_sexp_conv ppx_sexp_message ppx_deriving_yojson))
  (libraries  comby.patdiff comby.camlzip comby.statistics comby.parsers comby.match comby.language core core.uuid mparser yojson ppx_deriving_yojson toml lwt lwt.unix))
