(library
  (name pipeline)
  (public_name comby.pipeline)
  (instrumentation (backend bisect_ppx))
  (preprocess (pps ppx_sexp_conv ppx_deriving_yojson))
  (libraries comby.configuration comby.interactive comby.statistics comby.parsers comby.match comby.language camlzip ppxlib core yojson ppx_deriving_yojson hack_parallel parany))
