(library
  (name pipeline)
  (public_name comby.pipeline)
  (instrumentation (backend bisect_ppx))
  (preprocess (pps ppx_sexp_conv ppx_deriving_yojson))
  (libraries comby.configuration comby.interactive comby.statistics comby.parsers comby.match comby.language comby.camlzip core yojson ppx_deriving_yojson parany
    (select parallel_hack.ml from
      (hack_parallel -> parallel_hack.available.ml)
      (!hack_parallel -> parallel_hack.parany_fallback.ml)) 
  ))

