(library
 (name alpha_test_integration)
 (modules
  test_optional_holes
  test_special_matcher_cases
  test_substring_disabled)
 (inline_tests)
 (preprocess (pps ppx_expect ppx_sexp_message ppx_deriving_yojson ppx_deriving_yojson.runtime))
 (libraries
  comby
  cohttp-lwt-unix
  core
  camlzip))

(alias
(name runtest)
(deps (source_tree example) (source_tree example/src/.ignore-me)))
