(library
 (name alpha_test_integration)
 (package comby)
 (modules
  test_custom_metasyntax
  test_optional_holes
  test_special_matcher_cases
  test_substring_disabled
  test_regex_holes)
 (inline_tests)
 (preprocess (pps ppx_expect ppx_sexp_message ppx_deriving_yojson))
 (libraries
  comby
  cohttp-lwt-unix
  core
  camlzip))

(alias
(name runtest)
(deps (source_tree example) (source_tree example/src/.ignore-me)))
