(library
  (name pipeline)
  (public_name comby.pipeline)
  (instrumentation (backend bisect_ppx))
  (preprocess (pps ppx_sexp_conv ppx_deriving_yojson))
  (libraries comby-kernel comby.statistics comby.configuration comby.interactive comby.camlzip core core.uuid yojson ppx_deriving_yojson parany
    (select parallel_hack.ml from
      (hack_parallel -> parallel_hack.available.ml)
      (!hack_parallel -> parallel_hack.parany_fallback.ml)) 
  ))

