(library
 (name matchers)
 (public_name comby-kernel.matchers)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_here ppx_sexp_conv ppx_sexp_message ppx_deriving_yojson))
 (libraries
  comby-kernel.replacement
  comby-kernel.parsers
  comby-kernel.match
  comby-kernel.vangstrom
  core_kernel
  mparser
  mparser-pcre
  re
  yojson
  ppx_deriving_yojson))
